feat: update spring24 events and two fa24 events

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -554,7 +554,8 @@ button h4 {
 
 #acc-arrow,
 #acc-arrow2,
-#acc-arrow3 {
+#acc-arrow3,
+#acc-arrow4 {
   cursor: pointer;
   transform: rotate(0deg);
 }
