fix: fix aspect ratio for about page board images

--- a/src/components/about/accordion/styles.scss
+++ b/src/components/about/accordion/styles.scss
@@ -21,8 +21,8 @@
   
   .team-card-image {
     width: 100%;
-    height: 500px;
     object-fit: cover;
+    aspect-ratio: 2/3;
     cursor: pointer;
   }
   
